# Modular_Approach_Autonomous_Driving-

./: .gitignore  important.txt
src/package_all/: run.launch
src/package_all/aimlab/astar_map/3floor_capstone/: CornerMap.pcd  GlobalMap.pcd  SurfMap.pcd  trajectory.csv  trajectory.pcd  trajectory_wgs84.csv  transformations.pcd
src/package_all/aimlab/astar_map/map/: test_trajectory.osm
src/package_all/aimlab/astar_map/map/3floor_capstone/: CornerMap.pcd  GlobalMap.pcd  SurfMap.pcd  trajectory.csv  trajectory.pcd  trajectory_wgs84.csv  transformations.pcd
src/package_all/aimlab/dynamic_window_approach/scripts/: dynamicwindowapproach.py  dynamicwindowapproach_best.py
src/package_all/aimlab/lio-localizer/config/: params-robot_scout.yaml
src/package_all/aimlab/lio-localizer/launch/include/config/: rviz.rviz
src/package_all/aimlab/lio-sam/config/: params-robot.yaml
src/package_all/aimlab/parking_executor/: CMakeLists.txt  package.xml
src/package_all/aimlab/parking_executor/config/: twist_mux.yaml
src/package_all/aimlab/parking_executor/launch/: parking_autopark.launch
src/package_all/aimlab/parking_executor/scripts/: arrive_monitor.py  parking_controller.py  parking_controller_origin.py
src/package_all/aimlab/parking_occupancy/config/: slots_3floor.yaml  slots_3floor_capstone.yaml  slots_b1.yaml  slots_test.yaml
src/package_all/aimlab/parking_occupancy/launch/: parking_occupancy.launch
src/package_all/aimlab/parking_occupancy/nodes/: fixed_parking_occupancy.py
